--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "author": "Kasalehlia <kasalehlia@clonejo.de>",
   "dependencies": {
     "bcrypt-nodejs": "*",
+    "coffee-script": "1.x",
     "consolidate": "*",
     "express": "3.x",
     "http-proxy": "1.x",
     "mustache": "*",
     "mv": "^2.0.3",
+    "sequelize": "^3.30.2",
     "sqlite3": "*",
-    "ws": "~1.1",
-    "coffee-script": "1.x"
+    "ws": "~1.1"
   },
   "main": "main.js",
   "repository": {
